--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -276,3 +276,6 @@ table.dataTable thead .sorting:after {
 .panel-yellow a:hover {
   color: #df8a13;
 }
+.unread {
+  background-color: rgba(178, 196, 224, 0.73);
+}
